--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "factory",
+  "name": "@grahamsutton/factory",
   "version": "1.0.0",
   "description": "Generate lots of fake API data quickly.",
-  "main": "index.js",
+  "main": "./dist/factory.js",
   "scripts": {
     "build": "webpack",
     "test": "jest"
